# agentpress

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  agent.py  agentpress.db  api.py  main.db  pyproject.toml  state.json  state_manager.py  todos.md
adamfrontend/: package-lock.json  package.json  tailwind.config.js
agent/: api.py  prompt.py  run.py
agentpress/: __init__.py  agent.py  api.py  api_factory.py  base_processors.py  cli.py  config.py  db.py  db_connection.py  interfaces.py  llm.py  llm_response_processor.py  response_processor.py  standard_results_adder.py  standard_tool_executor.py  standard_tool_parser.py  state_manager.py  thread_llm_response_processor.py  thread_manager.py  thread_viewer_ui.py  tool.py  tool_executor.py  tool_parser.py  tool_registry.py  xml_results_adder.py  xml_tool_executor.py  xml_tool_parser.py
backend/: .env.example  .gitignore  api.py  fly.toml  pyproject.toml  requirements.txt  server_log.txt  test_parallel.py  test_wait_tool.py
brycefrontend/: package-lock.json
core/: __init__.py  agent_manager.py  api.py  cli.py  config.py  constants.py  db.py  llm.py  thread_manager.py  tool.py  tool_registry.py  ui.py
example/: __init__.py  agent.py
frontend/: .env  .env.example  .env.local.example  .gitignore  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontendbasejump/: .env.local.example  .env.x  package-lock.json  package.json  tailwind.config.ts
prisma/: schema.prisma
supabase/: config.toml
threads/: 0019ba22-c77c-450c-89c3-61444d157a20.json  03eb66b2-bed2-4422-ac6f-66ab8af370f2.json  04060f77-758f-4125-93f3-95c3a3058ea0.json  07da2eb9-d96f-4133-9687-ed50f12d060c.json  090d0276-d592-4a55-b040-101c3a47ea48.json  1185012f-c411-4791-8968-d142f1f38006.json  1231438c-439e-4cff-ac93-11ef39c5d33a.json  126c8950-c813-4bb9-853e-d5503fd91a06.json  157bf707-f72c-4588-9d02-f5841fa42d61.json  248de190-aeeb-4327-b76b-89226faf8212.json  266e59d2-f3a0-42c9-bde8-af8d65a1f04c.json  2de67204-b9bd-42f6-b139-997ab85e4483.json  31ad882c-4b82-46bc-ad8d-ec4f90511c7c.json  31ea4bda-181a-4c5f-bc50-ed1fe52b3475.json  34018815-21ef-40ae-ac70-11a370e07946.json  34d7d459-f46f-4230-99a1-4a2077ca7c91.json  3f1f1028-a61d-4272-a03c-0f2b4774857e.json  45197f69-5885-416c-bced-fb0f2fee319f.json  4a2c3413-3a41-4eb1-9952-b9ed220f4138.json  4d5a9d1c-69b4-4fd3-8208-b5723743388a.json  4e3935ec-705a-4116-8ee3-5db9c50ee24a.json  502df647-c83a-4b32-9435-bf3a93c97481.json  513c30a8-2ff3-4dc1-9ef8-808f1c5bde48.json  54965ca3-b6fd-4f21-8b3f-6a4b82ba201e.json  59183ab0-0348-4c73-a044-c2cac3c31d97.json  5c671561-5960-4011-88fb-5d32dfe30698.json  5d732243-ce5d-4a26-b81f-30af9305817f.json  5f21ca3c-5125-4a8d-b50e-0a458527c0bf.json  (+45 more)
(+663 files in other folders)
