[tool.poetry]
name = "agentpress"
version = "0.1.0"
description = "LLM Messages[] API on Steroids called \"Threads\" with easy Tool Definition & Tool Execution"
authors = ["marko-kraemer <markokraemer.mail@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agentpress" },
]

[tool.poetry.dependencies]
python = "^3.12"
streamlit-quill = "^0.0.3"
python-dotenv = "^1.0.1"
litellm = "^1.44.4"
agentops = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"