[tool.poetry]
name = "agentpress"
version = "0.1.8"
description = "Building blocks for AI Agents"
authors = ["marko-kraemer <mail@markokraemer.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kortix-ai/agentpress"
repository = "https://github.com/kortix-ai/agentpress"
keywords = ["llm", "ai", "agents", "ai agents", "ai agent framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
streamlit-quill = "^0.0.3"
python-dotenv = "^1.0.1"
litellm = "^1.44.4"
agentops = "^0.3.10"
click = "^8.1.7"
questionary = "^2.0.1"
requests = "^2.31.0"
packaging = "^23.2"
setuptools = "^75.3.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.scripts]
agentpress = "agentpress.cli:main"

[[tool.poetry.packages]]
include = "agentpress"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"